@@ -1,6 +1,6 @@
 Package: MonetDB.R
 Version: 0.9.4
-Date: 2013-07-14
+Date: 2013-07-16
 Title: Connect MonetDB to R
 Authors@R: c(person("Hannes Muehleisen", role = c("aut", "cre"),email = "hannes@cwi.nl"),
 	person("Thomas Lumley", role = "ctb"),
